--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
-    "@mui/x-data-grid": "^8.3.0",
+    "@mui/x-charts": "^8.3.1",
+    "@mui/x-data-grid": "^8.3.1",
     "@reduxjs/toolkit": "^2.8.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
